# lamport

./: .gitignore  ASSIGNMENT_COMPLETION.md  CLAUDE.md  Makefile  README.md  config.yaml  main.py  pyproject.toml  ruff.toml
src/: cli.py  config.py  main.py
src/agents/: __init__.py  base.py  code_generator.py  debugger.py  file_planner.py  project_planner.py  spec_interpreter.py
src/graph/: __init__.py  workflow.py
src/schemas/: __init__.py  models.py
src/utils/: __init__.py  builder.py  clarification.py  file_ops.py  llm_utils.py  logging.py
src/validators/: __init__.py  static_validator.py
