[project]
name = "smart-contractor"
version = "0.1.0"
description = "AI-powered Solana smart contract generator using Anchor/Rust"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "langchain>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
solana-contractor = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
